<resources>
    <string name="app_name">UniShop</string>
    <string name="youremail">Enter your email</string>
    <string name="yourpassword"> Enter your password</string>
    <string name="login">LOGIN</string>
    <string name="remember">Remember Me</string>
    <string name="newregistration">Register Here</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="clicktotake">Click above to take picture</string>
    <string name="location">Location</string>
    <string name="matricno">Matric No</string>
    <string name="phone">Mobile Phone</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sethomelocation">Home Location</string>
    <string name="register">REGISTER</string>
    <string name="alreadyregister">Already Register</string>
    <string name="registration">Registration</string>
    <string name="close">CLOSE</string>
    <string name="dialogtakepicture">Take Picture?</string>
    <string name="dialogtakepicturea">Make sure to use your own picture</string>
    <string name="yesbutton">Yes</string>
    <string name="nobutton">No</string>
    <string name="selectlocation">Select Location</string>
    <string name="cart">My Cart</string>
    <string name="registerdialognew">Register new account</string>
    <string name="registrationprocess">Registration in progress</string>
    <string name="registerfor">Register for</string>
    <string name="newaccount">NEW ACCOUNT</string>
    <string name="selectcategory">Select Category</string>
    <string name="category">category</string>
    <string name="hellonewuser">Hello, new user!</string>
    <string name="username">Username</string>
    <string name="fullname">Full Name</string>

    <string-array name="category">
        <item>All</item>
        <item>Clothes</item>
        <item>Bags</item>
        <item>Shoes</item>
    </string-array>

</resources>
