<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@android:color/holo_orange_dark"
    android:fitsSystemWindows="true"
    android:gravity="top"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_orange_dark"
        android:gravity="center|top"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="40dp"
        android:paddingRight="24dp">

        <TextView
            android:id="@+id/newUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/newaccount"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="180dp"
            android:layout_height="180dp"
            app:srcCompat="@mipmap/camera" />
        <!-- Email Label -->


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/clicktotake"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="5dp"
            android:background="?attr/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fullname"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/txtname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittextshape"
                android:ems="10"
                android:inputType="text"
                android:padding="7dp"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/txtphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:background="@drawable/edittextshape"
                android:inputType="phone"
                android:padding="7dp"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittextshape"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:padding="7dp"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/txtpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittextshape"
                android:ems="10"
                android:inputType="textPassword"
                android:padding="7dp"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null" />
        </LinearLayout>
        <!-- Password Label -->


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/buttonregister"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvregister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/alreadyregister"
            android:textColor="@android:color/white"
            android:textSize="16dip"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>